[package]
name = "nym-registration-client"
description = "Crate for dealing with Mixnet and Wireguard registration between Nym clients and Gateways"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
rand09.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
typed-builder.workspace = true

nym-authenticator-client = { workspace = true }
nym-bandwidth-controller = { workspace = true }
nym-credential-storage = { workspace = true }
nym-credentials-interface = { workspace = true }
nym-crypto = { workspace = true, features = ["asymmetric", "libcrux_x25519"] }
nym-ip-packet-client = { workspace = true }
nym-lp = { path = "../common/nym-lp" }
nym-registration-common = { workspace = true }
nym-sdk = { workspace = true }
nym-validator-client = { workspace = true }
nym-wireguard-types = { path = "../common/wireguard-types" }

[dev-dependencies]
nym-kkt.workspace = true
nym-test-utils.workspace = true