[package]
name = "nym-signers-monitor"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env", "string"] }
humantime = { workspace = true }
itertools = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
url = { workspace = true }

nym-bin-common = { workspace = true, features = ["output_format", "basic_tracing"] }
nym-ecash-signer-check = { workspace = true }
nym-network-defaults = { workspace = true }
nym-task = { workspace = true }
nym-validator-client = { workspace = true }
zulip-client = { path = "../common/zulip-client" }

[lints]
workspace = true
