[package]
name = "sphinx-wasm"
version = "0.1.0"
authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
curve25519-dalek = "2.0.0"
slice_as_array = "1.1.0"
wasm-bindgen = "0.2"


# internal
sphinx = { git = "https://github.com/nymtech/sphinx", rev="298c7fda6a577daf6d9bb955fa52c2bffecf6926" }
crypto = { path = "../common/crypto" }
nymsphinx = { path = "../common/nymsphinx" }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

# This gets ignored right now, and there is a compiler warning generated:
# "warning: profiles for the non root package will be ignored, specify profiles 
# at the workspace root"
#
# I'm OK with that for the moment, I don't want to put it in the root Cargo file
# as I'm unclear what effect it'll have and I'm still experimenting with wasm. 
# But it's good that we are reminded to do something about it before any 
# production release.
[profile.release] 
# Tell `rustc` to optimize for small code size.
opt-level = "s"
